--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="./images/favicon-32x32.png"
     />
     <link href="./style.css" rel="stylesheet" />
+    <script src="./toggleMode.js" defer></script>
+
     <script src="./app.js" defer></script>
 
     <title>Frontend Mentor | Todo app</title>
