Third commit: desktop view, active states, rendering fix

--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
           <button class="button button__list" id="completed">Completed</button>
         </div>
       </div>
+      <div class="wrapper wrapper__bottom__desktop">
+          <p id="items-left">items left</p>
+          <div class="lists-container">
+            <button class="button button__list" id="all">All</button>
+            <button class="button button__list" id="active">Active</button>
+            <button class="button button__list" id="completed">Completed</button>
+          </div>
+          <button class="button button_list button__clear__all">
+            Clear Completed
+          </button>
+        </div>
+      </div>
       <div class="wrapper wrapper__drag">
         <p>Drag and drop to reorder list</p>
       </div>
@@ -56,7 +68,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://www.frontendmentor.io/profile/k-stopczynska">k-stopczynska</a>.
       </div>
     </footer>
   </body>
