Forth commit: colors fix, local storage

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
       </section>
       <div class="wrapper wrapper__bottom">
         <div class="button-left-container">
-          <p id="items-left">items left</p>
+          <p class="items-left">items left</p>
           <button class="button button_list button__clear__all">
             Clear Completed
           </button>
         </div>
         <div class="lists-container">
-          <button class="button button__list" id="all">All</button>
+          <button class="button button__list active" id="all">All</button>
           <button class="button button__list" id="active">Active</button>
           <button class="button button__list" id="completed">Completed</button>
         </div>
       </div>
       <div class="wrapper wrapper__bottom__desktop">
-          <p id="items-left">items left</p>
+          <p class="items-left">items left</p>
           <div class="lists-container">
-            <button class="button button__list" id="all">All</button>
+            <button class="button button__list active" id="all">All</button>
             <button class="button button__list" id="active">Active</button>
             <button class="button button__list" id="completed">Completed</button>
           </div>
