Fifth commit: drag&drop

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link href="./style.css" rel="stylesheet" />
-    <script src="./toggleMode.js" defer></script>
+    <link href="./src/styles/style.css" rel="stylesheet" />
+    <script src="./src/scripts/toggleMode.js" defer></script>
 
-    <script src="./app.js" defer></script>
+    <script src="./src/scripts/App.js" defer type="module"></script>
 
     <title>Frontend Mentor | Todo app</title>
   </head>
